; ModuleID = '/home/carl/AnghaBench/mpv/audio/extr_format.c_af_fill_silence.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/extr_format.c_af_fill_silence.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @af_fill_silence(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load i32, i32* %6, align 4
  %9 = call i64 @af_fmt_is_unsigned(i32 %8)
  %10 = icmp ne i64 %9, 0
  %11 = zext i1 %10 to i64
  %12 = select i1 %10, i32 128, i32 0
  %13 = load i64, i64* %5, align 8
  %14 = call i32 @memset(i8* %7, i32 %12, i64 %13)
  ret void
}

declare dso_local i32 @memset(i8*, i32, i64) #1

declare dso_local i64 @af_fmt_is_unsigned(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
